# sweetie_bot_rt_control

./: .gitignore  .gitmodules  README.md
motion/sweetie_bot_agregator/: CMakeLists.txt  README.md  package.xml
motion/sweetie_bot_agregator/launch/: test_agregator.launch
motion/sweetie_bot_agregator/scripts/: send_joint_state_partial.sh  test_agregator.ops
motion/sweetie_bot_agregator/src/: CMakeLists.txt  agregator-component.cpp  agregator-component.hpp
motion/sweetie_bot_controller_joint_space/: CMakeLists.txt  package.xml  test_joint_trajectory.py
motion/sweetie_bot_controller_joint_space/src/: CMakeLists.txt  animation_joint_trajectory-base.cpp  animation_joint_trajectory-base.hpp  animation_joint_trajectory-component.cpp  animation_joint_trajectory-component.hpp  filter_joint_state_exp-service.cpp  filter_joint_state_exp_individual-service.cpp  follow_joint_state-component.cpp  follow_joint_state-component.hpp  joint_state_check.hpp  joint_trajectory_cache.cpp  torque_main_switch-component.cpp  torque_main_switch-component.hpp  transient_joint_state_exp-service.cpp  transient_joint_state_exp_individual-service.cpp
motion/sweetie_bot_controllers_joint_space/: CMakeLists.txt  package.xml
motion/sweetie_bot_controllers_joint_space/scripts/: cwd
motion/sweetie_bot_controllers_joint_space/src/: CMakeLists.txt  animation_joint_trajectory-base.cpp  animation_joint_trajectory-component.hpp  follow_joint_state-component.cpp  follow_joint_state-component.hpp  joint_state_check.cpp  joint_trajectory_cache.cpp
motion/sweetie_bot_dynamics/: CMakeLists.txt  README.md  package.xml
motion/sweetie_bot_dynamics/src/: CMakeLists.txt  dynamics_inv_simple-component.cpp  dynamics_inv_simple-component.hpp  visualizer.cpp
motion/sweetie_bot_imu_fusion/: CMakeLists.txt  package.xml
motion/sweetie_bot_imu_fusion/src/: CMakeLists.txt  pose_fusion_rtimulib-component.cpp  pose_fusion_rtimulib-component.hpp
motion/sweetie_bot_joints_diff/: CMakeLists.txt  package.xml
motion/sweetie_bot_joints_diff/scripts/: herkulex_control.log4cpp  prepare_data.bash  rez.m  syn_fir_dfilter.m  test_diff.ops  test_ref1.in
motion/sweetie_bot_joints_diff/src/: CMakeLists.txt  joints_diff.cpp  joints_diff.hpp
motion/sweetie_bot_kinematics/: CMakeLists.txt  README.md  package.xml
motion/sweetie_bot_kinematics/launch/: test_kinematics.launch  test_kinematics_aggregator.launch  test_kinematics_aggregator_rviz.launch  test_kinematics_agregator.launch  test_kinematics_agregator_rviz.launch
motion/sweetie_bot_kinematics/scripts/: brohoof_joints.bag  brohoof_limbs.bag  config.log4cpp  send_cartesian2.sh  send_joint_seed.sh  send_joint_state.sh  send_joints_brohoof.sh  send_joints_seed.sh  send_joints_zero.sh  send_limbs_brohoof.sh  send_limbs_zero.sh  test_kinematics.ops  test_kinematics_aggregator.ops  test_kinematics_agregator.ops  zero_joints.bag  zero_limbs.bag
motion/sweetie_bot_kinematics/src/: CMakeLists.txt  kinematics-component.hpp  kinematics_fwd-component.cpp  kinematics_fwd-component.hpp  kinematics_fwd_force-component.cpp  kinematics_fwd_force-component.hpp  kinematics_inv_trac_ik-component.cpp  kinematics_inv_trac_ik-component.hpp
motion/sweetie_bot_odometry/: CMakeLists.txt  README.md  package.xml
motion/sweetie_bot_odometry/src/: CMakeLists.txt  odometry-component.cpp  odometry-component.hpp
motion/sweetie_bot_resource_client_usage_example/: CMakeLists.txt  README.md  package.xml
motion/sweetie_bot_resource_client_usage_example/launch/: test_controller.launch  test_controller_actionlib.launch
motion/sweetie_bot_resource_client_usage_example/scripts/: resource_control.log4cpp  resource_control.lua  test_resource_control.lua  test_resource_control_actionlib.lua
motion/sweetie_bot_resource_client_usage_example/src/: CMakeLists.txt  controller_actionlib_template-component.cpp  controller_actionlib_template-component.hpp  controller_template-component.cpp  controller_template-component.hpp
motion/sweetie_bot_resource_control/: CMakeLists.txt  README.md  package.xml
motion/sweetie_bot_resource_control/src/: CMakeLists.txt  actionlib_controller_base.cpp  resource_arbiter-component.cpp  resource_arbiter-component.hpp  resource_client-service.cpp  resource_client_dummy-service.cpp  simple_controller_base.cpp
motion/sweetie_bot_robot_model/: CMakeLists.txt  README.md  package.xml
motion/sweetie_bot_robot_model/src/: CMakeLists.txt  robot_model-service.cpp
motion/sweetie_bot_servo_inv/: CMakeLists.txt  README.md  package.xml
motion/sweetie_bot_servo_inv/scripts/: ref_servos12_sine.in  test_servo_inv.ops
motion/sweetie_bot_servo_inv/src/: CMakeLists.txt  player_joint_state.cpp  player_joint_state.hpp  ring_buffer.hpp  servo_ident.cpp  servo_ident.hpp  servo_inv_7param.cpp  servo_inv_7param.hpp  servo_inv_extrapolate.cpp  servo_inv_extrapolate.hpp  servo_inv_lead.cpp  servo_inv_lead.hpp  servo_inv_param.cpp  servo_inv_param.hpp
motion_msgs/rtt_sweetie_bot_kinematics_msgs/: CMakeLists.txt  package.xml
motion_msgs/rtt_sweetie_bot_servo_model_msg/: CMakeLists.txt  package.xml
motion_msgs/sweetie_bot_kinematics_msgs/: CMakeLists.txt  package.xml
motion_msgs/sweetie_bot_kinematics_msgs/action/: FollowStepSequence.action  MoveBase.action
motion_msgs/sweetie_bot_kinematics_msgs/msg/: BalanceState.msg  EndEffectorGoal.msg  JointStateAccel.msg  RigidBodyState.msg  RigidBodyTrajectory.msg  SupportState.msg
motion_msgs/sweetie_bot_resource_control_msgs/: CMakeLists.txt  package.xml
motion_msgs/sweetie_bot_resource_control_msgs/action/: SetOperational.action
sweetie_bot_common/: CMakeLists.txt  package.xml
sweetie_bot_core/rtt_sweetie_bot_resource_control_msgs/: CMakeLists.txt
sweetie_bot_core/sweetie_bot_agregator/: CMakeLists.txt  README.md  package.xml
sweetie_bot_core/sweetie_bot_agregator/src/: CMakeLists.txt  (+4 more)
sweetie_bot_core/sweetie_bot_gait_walking_3_plus_1/: CMakeLists.txt  package.xml
sweetie_bot_orocos_misc/: CMakeLists.txt  README.md  package.xml
sweetie_bot_orocos_misc/src/: CMakeLists.txt  joint_state_check.cpp  math.cpp  message_checks.cpp
(+214 files in other folders)
