<package format="2">
  <name>sweetie_bot_orocos_misc</name>
  <version>1.0.0</version>
  <description>Different support libraries for SweetiBot.</description>
  <maintainer email="goncharovoi@yandex.ru">disRecord</maintainer>

  <license>BSD</license>

  <url type="website">https://gitlab.com/sweetie-bot/sweetie_doc/wikis</url>
  <!-- <url type="bugtracker"></url> -->

  <author>disRecord</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- ROS and OROCOS packages -->
  <depend>rtt</depend>
  <depend>ocl</depend>
  <depend>rtt_ros</depend>
  <depend>actionlib</depend>
  <depend>rtt_actionlib</depend>
  <depend>orocos_kdl</depend>
  <!-- ROS and OROCOS datatypes -->
  <depend>kdl_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <!-- SWEETIEBOT packages -->
  <!-- SWEETIEBOT datatypes -->
  <depend>sweetie_bot_kinematics_msgs</depend>

  <export>
	  <rtt_ros>
		  <!-- Plugin deps are loaded automatically by the rtt_ros import service -->
	  </rtt_ros>
  </export>
</package>
