<package format="2">
  <name>sweetie_bot_controllers_joint_space</name>
  <version>1.0.0</version>
  <description>Basic controllers for SweetieBot operating in joint space.</description>
  <maintainer email="goncharovoi@yandex.ru">Oleg Goncharov (disRecord)</maintainer>

  <license>BSD</license>

  <url type="website">https://gitlab.com/sweetie-bot/sweetie_doc/wikis</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Oleg Goncharov (disRecord)</author>

  <!-- ROS and OROCOS packages -->
  <depend>rtt</depend>
  <depend>actionlib</depend>
  <depend>rtt_actionlib</depend>
  <depend>orocos_kdl</depend>
  <!-- ROS and OROCOS datatypes -->
  <depend>rtt_std_srvs</depend>
  <depend>rtt_sensor_msgs</depend>
  <depend>rtt_control_msgs</depend>
  <!-- SWEETIEBOT packages -->
  <depend>sweetie_bot_logger</depend>
  <depend>sweetie_bot_resource_control</depend>
  <depend>sweetie_bot_robot_model</depend>
  <!-- SWEETIEBOT datatypes -->
  <depend>rtt_sweetie_bot_resource_control_msgs</depend>

  <export>
	  <rtt_ros>
		  <!-- Plugin deps are loaded automatically by the rtt_ros import service -->
		  <plugin_depend>rtt_actionlib</plugin_depend>
		  <plugin_depend>rtt_std_srvs</plugin_depend>
		  <plugin_depend>rtt_sensor_msgs</plugin_depend>
		  <plugin_depend>rtt_control_msgs</plugin_depend>
		  <plugin_depend>rtt_sweetie_bot_resource_control_msgs</plugin_depend>
	  </rtt_ros>
  </export>
</package>
