<package format="2">
  <name>sweetie_bot_dynamics</name>
  <version>1.0.0</version>
  <description>Inverse dynamics for SweetieBot robot</description>
  <maintainer email="unknown@maintainer.com">Unknown Author</maintainer>

  <license>BSD</license>

  <url type="website">https://gitlab.com/sweetie-bot/sweetie_doc/wikis</url>
  <url type="website">https://sweetiebot.net</url>
  <!-- <url type="bugtracker"></url> -->

  <author>disRecord</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- ROS and OROCOS packages -->
  <depend>rtt</depend>
  <depend>rtt_ros</depend>
  <depend>orocos_kdl</depend>
  <depend>eigen_conversions</depend>
  <depend>kdl_conversions</depend>
  <depend>tf_conversions</depend>
  <!-- ROS and OROCOS datatypes -->
  <depend>sensor_msgs</depend>
  <depend>rtt_sensor_msgs</depend>
  <!-- SWEETIEBOT packages -->
  <depend>sweetie_bot_logger</depend>
  <depend>sweetie_bot_robot_model</depend>
  <depend>sweetie_bot_orocos_misc</depend> <!-- actionlib client, JointState checks, find subservice -->
  <!-- SWEETIEBOT datatypes -->
  <depend>sweetie_bot_kinematics_msgs</depend>
  <depend>rtt_sweetie_bot_kinematics_msgs</depend>

  <export>
	  <rtt_ros>
		  <!-- Plugin deps are loaded automatically by the rtt_ros import service -->
		  <plugin_depend>rtt_sensor_msgs</plugin_depend>
		  <plugin_depend>rtt_sweetie_bot_kinematics_msgs</plugin_depend>
	  </rtt_ros>
  </export>
</package>
