<package format="2">
  <name>sweetie_bot_kinematics</name>
  <version>1.0.0</version>
  <description>Forward and inverse Kinematics modules for SweetieBot.</description>
  <maintainer email="unknown@maintainer.com">Unknown Author</maintainer>

  <license>BSD</license>

  <url type="website">https://gitlab.com/sweetie-bot/sweetie_doc/wikis</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Mutronics</author>

  <!-- ROS and OROCOS packages -->
  <depend>rtt</depend>
  <depend>rtt_ros</depend>
  <depend>orocos_kdl</depend>
  <depend>kdl_conversions</depend>
  <depend>trac_ik_lib</depend>
  <!-- ROS and OROCOS datatypes -->
  <depend>rtt_sensors_msgs</depend>
  <!-- SWEETIEBOT packages -->
  <depend>sweetie_bot_logger</depend>
  <depend>sweetie_bot_orocos_misc</depend> <!-- actionlib client, JointState checks, find subservice -->
  <depend>sweetie_bot_robot_model</depend>
  <!-- SWEETIEBOT datatypes -->
  <depend>rtt_sweetie_bot_kinematics_msgs</depend>

  <export>
	  <rtt_ros>
		  <!-- Plugin deps are loaded automatically by the rtt_ros import service -->
		  <plugin_depend>rtt_sensor_msgs</plugin_depend>
		  <plugin_depend>rtt_sweetie_bot_kinematics_msgs</plugin_depend>
	  </rtt_ros>
  </export>
</package>
