<package format="2">
  <name>sweetie_bot_odometry</name>
  <version>1.0.0</version>
  <description>Odometry component and libraries for SweetieBot.</description>
  <maintainer email="goncharovoi@yandex.ru">disRecord</maintainer>

  <license>BSD</license>

  <url type="website">https://gitlab.com/sweetie-bot/sweetie_doc/wikis</url>
  <url type="website">https://sweetiebot.net</url>
  <!-- <url type="bugtracker"></url> -->

  <author>disRecord</author>

  <!-- ROS and OROCOS packages -->
  <depend>rtt</depend>
  <depend>rtt_ros</depend>
  <depend>orocos_kdl</depend>
  <depend>kdl_conversions</depend>
  <!-- ROS and OROCOS datatypes -->
  <depend>rtt_tf2_msgs</depend>
  <!-- SWEETIEBOT packages -->
  <depend>sweetie_bot_logger</depend>
  <depend>sweetie_bot_robot_model</depend>
  <!-- SWEETIEBOT datatypes -->
  <depend>rtt_sweetie_bot_kinematics_msgs</depend>

  <export>
	  <rtt_ros>
		  <!-- Plugin deps are loaded automatically by the rtt_ros import service -->
		  <plugin_depend>rtt_tf2_msgs</plugin_depend>
		  <plugin_depend>rtt_sweetie_bot_kinematics_msgs</plugin_depend>
	  </rtt_ros>
  </export>
</package>
