<package format="2">
  <name>sweetie_bot_resource_control</name>
  <version>1.0.0</version>
  <description>SweetieBot robot resource arbiter package.  </description>

  <maintainer email="rovboma@gmail.com">Maxim Rovbo</maintainer>

  <license>BSD</license>

  <url type="website">https://gitlab.com/sweetie-bot/sweetie_doc/wikis</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Maxim Rovbo</author>
  <author>disRecord</author>

  <!-- ROS and OROCOS packages -->
  <depend>rtt</depend>
  <!-- ROS and OROCOS datatypes -->
  <!-- SWEETIEBOT packages -->
  <depend>sweetie_bot_logger</depend>
  <!-- SWEETIEBOT datatypes -->
  <depend>sweetie_bot_resource_control_msgs</depend>
  <depend>rtt_sweetie_bot_resource_control_msgs</depend>

  <export>
	  <rtt_ros>
		  <!-- Plugin deps are loaded automatically by the rtt_ros import service -->
		  <plugin_depend>rtt_sweetie_bot_resource_control_msgs</plugin_depend>
	  </rtt_ros>
  </export>
</package>
